parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Mailers/Mailer.ContactUs.cs.pp
namespace $rootnamespace$.Mailers
{
    using System.Net.Mail;
    using Core.Common.Site;
    using Models;

    public partial class Mailer
    {       
        public virtual MailMessage ContactUs(ContactUsModel model)
        {
            var mailMessage = new MailMessage { Subject = "Contact Us" };

            mailMessage.To.Add(Site.Instance.EmailAddress);
            PopulateBody(mailMessage, viewName: "ContactUs");

            return mailMessage;
        }
    }
}